=== changes in behavior that would not be backwards compatible with
=== previous versions; for that information see the UPGRADE.txt file
=== and the other UPGRADE files for older releases.
===
======================================================================

------------------------------------------------------------------------------
--- Functionality changes since Asterisk 1.8.12.0 ----------------------------
------------------------------------------------------------------------------

Build System
------------
 * The optimization portion of the build system has been reworked to avoid
   broken builds on certain architectures.  All architecture-specific
   optimization has been removed in favor of using -march=native to allow gcc
   to detect the environment in which it is running when possible.  This can
   be toggled as BUILD_NATIVE under "Compiler Flags" in menuselect.

------------------------------------------------------------------------------
--- Functionality changes since Asterisk 1.8.10.0 ----------------------------
------------------------------------------------------------------------------

Background DNS Update Manager
-----------------------------
 * The default verbosity for ast_verb() messages has been increased to 6. This
   should help reduce the 'doing dnsmgr_lookup for' message from spamming the
   CLI.

------------------------------------------------------------------------------
--- Functionality changes since Asterisk 1.8.9.1 -----------------------------
------------------------------------------------------------------------------

Gosub changes
-------------
 * A new function, STACK_PEEK, has been added, to correlate for functionality
   available in AEL in 1.4 that disappeared in 1.8.  STACK_PEEK permits the
   user to see the location of the calling Gosub from within the subroutine.

------------------------------------------------------------------------------