@@ -9,6 +9,15 @@
 ======================================================================
 
 ------------------------------------------------------------------------------
+--- Functionality changes since Asterisk 1.8.19.1 ----------------------------
+------------------------------------------------------------------------------
+
+App_queue
+---------
+ * App_queue will now play periodic announcements for the caller that
+   holds the first position in the queue while waiting for answer.
+
+------------------------------------------------------------------------------
 --- Functionality changes since Asterisk 1.8.12.0 ----------------------------
 ------------------------------------------------------------------------------
 
